# baxter_synchronisation_citable

./: README.md
Baxter_Synchronisation/: CMakeLists.txt  Simulator_Launcher.launch  Simulator_Launcher.launch~  mainpage.dox  package.xml  setup.py
Baxter_Synchronisation/msg/: Pos.msg~
Baxter_Synchronisation/scripts/: master_unit.py  newslave_unit.py
